# msp2lib

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.md  README.rst  __pkginfo__.py  build_docker.sh  cleanup.sh  config.ini  formate.toml  git_helper.yml  lint_roller.sh  make_manpage.sh  msp2lib.py  pyproject.toml  repo_helper.yml  requirements.txt  run_docker.sh  setup.cfg  setup.py  sphinx_shared.py  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mypy.yml  octocheese.yml  python_ci_linux.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  manpage.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
manpage-builder/: conf.py  manpage.rst  requirements.txt  sphinx_shared.py
msp2lib/: Dockerfile  __init__.py  __main__.py  core.py  make_nistlib.sh  utils.py
