[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "msp2lib"
version = "0.1.3"
description = "Convert an MSP file representing one or more Mass Spectra to a NIST MS Search user library."
readme = "README.rst"
keywords = [ "chemistry", "docker", "mass-spectrometry", "wine",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/msp2lib"
"Issue Tracker" = "https://github.com/domdfcoding/msp2lib/issues"
"Source Code" = "https://github.com/domdfcoding/msp2lib"
Documentation = "https://msp2lib.readthedocs.io/en/latest"

[project.scripts]
msp2lib = "msp2lib:main"

[tool.importcheck]

[tool.sphinx-pyproject]
github_username = "domdfcoding"
github_repository = "msp2lib"
author = "Dominic Davis-Foster"
project = "msp2lib"
copyright = "2020 Dominic Davis-Foster"
language = "en"
package_root = "msp2lib"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinxcontrib.toctree_plus",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "html_section",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "furo"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython",]
platforms = [ "Linux",]
license-key = "LGPL-3.0-or-later"
additional-files = [ "include msp2lib.1", "include msp2lib/Dockerfile", "include msp2lib/make_nistlib.sh",]

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
