# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = msp2lib
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU Lesser General Public License v3 or later (LGPLv3+)
keywords = wine, docker, mass-spectrometry, chemistry
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Linux
url = https://github.com/domdfcoding/msp2lib
project_urls =
    Documentation = https://msp2lib.readthedocs.io/en/latest
    Issue Tracker = https://github.com/domdfcoding/msp2lib/issues
    Source Code = https://github.com/domdfcoding/msp2lib
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
console_scripts = msp2lib=msp2lib:main
